[gd_scene load_steps=16 format=2]

[ext_resource path="res://Entities/InteractableObjects/Fridge.tres" type="Material" id=1]
[ext_resource path="res://Sounds/SoundEffects/purifierambient.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/asset package custom/kenney rpg audio/doorOpen_1.ogg" type="AudioStream" id=3]
[ext_resource path="res://Entities/InteractableObjects/fridgeinterior.tres" type="Material" id=4]
[ext_resource path="res://Handle.gd" type="Script" id=5]
[ext_resource path="res://FridgeUnit.gd" type="Script" id=6]
[ext_resource path="res://Assets/asset package custom/kenney rpg audio/doorClose_4.ogg" type="AudioStream" id=7]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
albedo_color = Color( 0.780392, 0.819608, 1, 0.486275 )
metallic = 1.0

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 1 )
radius = 0.05
mid_height = 0.1

[sub_resource type="CapsuleMesh" id=3]
material = ExtResource( 1 )
radius = 0.05
mid_height = 0.5

[sub_resource type="CapsuleShape" id=4]
radius = 0.05
height = 0.5

[sub_resource type="BoxShape" id=5]
extents = Vector3( 3, 3, 3 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.5, 0.1, 0.4 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.5, 0.75, 0.1 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.05, 0.75, 0.4 )

[node name="FridgeUnit" type="KinematicBody"]
script = ExtResource( 6 )

[node name="FridgeBody" type="CSGBox" parent="."]
operation = 2
width = 1.0
height = 1.5
depth = 0.8
material = ExtResource( 1 )

[node name="Interior" type="CSGBox" parent="FridgeBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.182861, -0.236276 )
operation = 2
width = 0.8
height = 0.733099
depth = 0.4
material = ExtResource( 4 )

[node name="Interior2" type="CSGBox" parent="FridgeBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.334428, -0.236276 )
operation = 2
width = 0.8
height = 0.213817
depth = 0.4
material = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="FridgeBody"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.510478, -0.074134 )
mesh = SubResource( 2 )

[node name="OmniLight" type="OmniLight" parent="FridgeBody/MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.006 )
light_color = Color( 0.639216, 0.807843, 1, 1 )
light_energy = 3.729
light_specular = 0.0
omni_range = 1.0

[node name="Hinge" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.363129, 0, -0.36597 )

[node name="Door" type="CSGBox" parent="Hinge"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.363129, 0, -0.121495 )
use_collision = true
width = 0.8
height = 1.2
depth = 0.2
material = ExtResource( 1 )

[node name="Handle" type="KinematicBody" parent="Hinge/Door" groups=["Interactable"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.291988, 0.148709, -0.0624523 )
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Hinge/Door/Handle"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Hinge/Door/Handle"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Area" type="Area" parent="Hinge/Door/Handle"]

[node name="CollisionShape" type="CollisionShape" parent="Hinge/Door/Handle/Area"]
shape = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.656206, 0 )
shape = SubResource( 6 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.632662, 0 )
shape = SubResource( 6 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.292062 )
shape = SubResource( 7 )

[node name="CollisionShape4" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.446441, 0, 0 )
shape = SubResource( 8 )

[node name="CollisionShape5" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.446441, 0, 0 )
shape = SubResource( 8 )

[node name="Ambient" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="DoorOpen" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )

[node name="DoorClose" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )

[connection signal="open_close" from="Hinge/Door/Handle" to="." method="_on_Handle_open_close"]
